[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/level.gd" type="Script" id=1]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/environment/tiles/sunny_land/sunny.tres" type="TileSet" id=3]
[ext_resource path="res://scenes/frog.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2910.75, 30.6556 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.89349, 123.523 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 35.709, 35.3842 )

[node name="fase_2" type="Node2D"]
script = ExtResource( 1 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 92.713, 399.691 )

[node name="TileMap" type="TileMap" parent="."]
editor/display_folded = true
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 720983, 9, 0, 720984, 9, 0, 720985, 9, 0, 720986, 9, 0, 720987, 9, 0, 720988, 9, 0, 720989, 9, 0, 720990, 9, 0, 720991, 9, 0, 720992, 9, 0, 720993, 9, 0, 720994, 9, 0, 720995, 9, 0, 720996, 9, 0, 720997, 9, 0, 720998, 9, 0, 720999, 9, 0, 721000, 9, 0, 721001, 9, 0, 721002, 9, 0, 721003, 9, 0, 721004, 9, 0, 721005, 9, 0, 721006, 9, 0, 721007, 9, 0, 721008, 9, 0, 721009, 9, 0, 721010, 9, 0, 721011, 9, 0, 721012, 9, 0, 721013, 9, 0, 721014, 9, 0, 721015, 9, 0, 721016, 9, 0, 721017, 9, 0, 721018, 9, 0, 721019, 9, 0, 721020, 9, 0, 721021, 9, 0, 786519, 9, 0, 786553, 9, 0, 786554, 9, 0, 786555, 9, 0, 786556, 9, 0, 852056, 9, 0, 852087, 9, 0, 852088, 9, 0, 852089, 9, 0, 917592, 9, 0, 917593, 9, 0, 917621, 9, 0, 917622, 9, 0, 917623, 9, 0, 983129, 9, 0, 983130, 9, 0, 983141, 9, 0, 983142, 9, 0, 983143, 9, 0, 983144, 9, 0, 983145, 9, 0, 983146, 9, 0, 983147, 9, 0, 983148, 9, 0, 983149, 9, 0, 983150, 9, 0, 983151, 9, 0, 983152, 9, 0, 983153, 9, 0, 983154, 9, 0, 983155, 9, 0, 983156, 9, 0, 983157, 9, 0, 983188, 9, 0, 983189, 9, 0, 983190, 9, 0, 1048666, 9, 0, 1048667, 9, 0, 1048677, 9, 0, 1048724, 9, 0, 1048725, 9, 0, 1048726, 9, 0, 1114203, 9, 0, 1114204, 9, 0, 1114205, 9, 0, 1114213, 9, 0, 1114260, 9, 0, 1114261, 9, 0, 1114262, 9, 0, 1179741, 9, 0, 1179742, 9, 0, 1179743, 9, 0, 1179749, 9, 0, 1179837, 9, 0, 1179838, 9, 0, 1179839, 9, 0, 1179840, 9, 0, 1179841, 9, 0, 1179842, 9, 0, 1179843, 9, 0, 1179844, 9, 0, 1179845, 9, 0, 1179846, 9, 0, 1179847, 9, 0, 1179848, 9, 0, 1179849, 9, 0, 1179850, 9, 0, 1179851, 9, 0, 1179852, 9, 0, 1179853, 9, 0, 1179854, 9, 0, 1179855, 9, 0, 1179856, 9, 0, 1179857, 9, 0, 1245280, 9, 0, 1245281, 9, 0, 1245285, 9, 0, 1245286, 9, 0, 1245373, 9, 0, 1245393, 9, 0, 1310783, 9, 0, 1310784, 9, 0, 1310785, 9, 0, 1310786, 9, 0, 1310787, 9, 0, 1310817, 9, 0, 1310822, 9, 0, 1310909, 9, 0, 1310929, 9, 0, 1376319, 9, 0, 1376323, 9, 0, 1376353, 9, 0, 1376358, 9, 0, 1376359, 9, 0, 1376360, 9, 0, 1376361, 9, 0, 1376362, 9, 0, 1376363, 9, 0, 1376364, 9, 0, 1376388, 9, 0, 1376389, 9, 0, 1376390, 9, 0, 1376445, 9, 0, 1376465, 9, 0, 1441855, 9, 0, 1441859, 9, 0, 1441889, 9, 0, 1441899, 9, 0, 1441900, 9, 0, 1441924, 9, 0, 1441925, 9, 0, 1441926, 9, 0, 1441981, 9, 0, 1442001, 9, 0, 1442002, 9, 0, 1442003, 9, 0, 1442004, 9, 0, 1442005, 9, 0, 1507391, 9, 0, 1507395, 9, 0, 1507426, 9, 0, 1507432, 9, 0, 1507433, 9, 0, 1507434, 9, 0, 1507435, 9, 0, 1507460, 9, 0, 1507461, 9, 0, 1507462, 9, 0, 1507517, 9, 0, 1507537, 9, 0, 1507541, 9, 0, 1572927, 9, 0, 1572931, 9, 0, 1572962, 9, 0, 1572968, 9, 0, 1573053, 9, 0, 1573073, 9, 0, 1573077, 9, 0, 1638456, 9, 0, 1638457, 9, 0, 1638458, 9, 0, 1638459, 9, 0, 1638460, 9, 0, 1638461, 9, 0, 1638462, 9, 0, 1638463, 9, 0, 1638467, 9, 0, 1638478, 9, 0, 1638479, 9, 0, 1638480, 9, 0, 1638481, 9, 0, 1638482, 9, 0, 1638483, 9, 0, 1638484, 9, 0, 1638485, 9, 0, 1638498, 9, 0, 1638504, 9, 0, 1638560, 9, 0, 1638561, 9, 0, 1638562, 9, 0, 1638563, 9, 0, 1638589, 9, 0, 1638609, 9, 0, 1638613, 9, 0, 1638614, 9, 0, 1638615, 9, 0, 1703975, 9, 0, 1703976, 9, 0, 1703977, 9, 0, 1703978, 9, 0, 1703979, 9, 0, 1703980, 9, 0, 1703989, 9, 0, 1703990, 9, 0, 1703991, 9, 0, 1703992, 9, 0, 1704003, 9, 0, 1704014, 9, 0, 1704021, 9, 0, 1704034, 9, 0, 1704035, 9, 0, 1704036, 9, 0, 1704037, 9, 0, 1704038, 9, 0, 1704039, 9, 0, 1704040, 9, 0, 1704096, 9, 0, 1704099, 9, 0, 1704100, 9, 0, 1704101, 9, 0, 1704102, 9, 0, 1704103, 9, 0, 1704125, 9, 0, 1704145, 9, 0, 1704151, 9, 0, 1704152, 9, 0, 1704153, 9, 0, 1769472, 9, 0, 1769473, 9, 0, 1769474, 9, 0, 1769475, 9, 0, 1769476, 9, 0, 1769477, 9, 0, 1769478, 9, 0, 1769479, 9, 0, 1769509, 9, 0, 1769510, 9, 0, 1769511, 9, 0, 1769516, 9, 0, 1769523, 9, 0, 1769524, 9, 0, 1769525, 9, 0, 1769539, 9, 0, 1769550, 9, 0, 1769558, 9, 0, 1769559, 9, 0, 1769560, 9, 0, 1769593, 9, 0, 1769594, 9, 0, 1769595, 9, 0, 1769596, 9, 0, 1769597, 9, 0, 1769613, 9, 0, 1769614, 9, 0, 1769615, 9, 0, 1769632, 9, 0, 1769640, 9, 0, 1769661, 9, 0, 1769681, 9, 0, 1769689, 9, 0, 1835008, 9, 0, 1835016, 9, 0, 1835017, 9, 0, 1835018, 9, 0, 1835019, 9, 0, 1835020, 9, 0, 1835021, 9, 0, 1835022, 9, 0, 1835023, 9, 0, 1835045, 9, 0, 1835052, 9, 0, 1835053, 9, 0, 1835054, 9, 0, 1835055, 9, 0, 1835056, 9, 0, 1835057, 9, 0, 1835058, 9, 0, 1835059, 9, 0, 1835075, 9, 0, 1835086, 9, 0, 1835096, 9, 0, 1835129, 9, 0, 1835133, 9, 0, 1835149, 9, 0, 1835150, 9, 0, 1835151, 9, 0, 1835168, 9, 0, 1835176, 9, 0, 1835177, 9, 0, 1835178, 9, 0, 1835179, 9, 0, 1835180, 9, 0, 1835181, 9, 0, 1835182, 9, 0, 1835183, 9, 0, 1835184, 9, 0, 1835185, 9, 0, 1835186, 9, 0, 1835187, 9, 0, 1835188, 9, 0, 1835197, 9, 0, 1835217, 9, 0, 1835225, 9, 0, 1900544, 9, 0, 1900559, 9, 0, 1900560, 9, 0, 1900561, 9, 0, 1900562, 9, 0, 1900563, 9, 0, 1900581, 9, 0, 1900611, 9, 0, 1900622, 9, 0, 1900632, 9, 0, 1900633, 9, 0, 1900634, 9, 0, 1900635, 9, 0, 1900636, 9, 0, 1900637, 9, 0, 1900638, 9, 0, 1900639, 9, 0, 1900640, 9, 0, 1900641, 9, 0, 1900642, 9, 0, 1900643, 9, 0, 1900644, 9, 0, 1900645, 9, 0, 1900646, 9, 0, 1900647, 9, 0, 1900648, 9, 0, 1900649, 9, 0, 1900650, 9, 0, 1900651, 9, 0, 1900665, 9, 0, 1900669, 9, 0, 1900685, 9, 0, 1900686, 9, 0, 1900687, 9, 0, 1900704, 9, 0, 1900724, 9, 0, 1900733, 9, 0, 1900753, 9, 0, 1900761, 9, 0, 1966080, 9, 0, 1966099, 9, 0, 1966100, 9, 0, 1966101, 9, 0, 1966102, 9, 0, 1966117, 9, 0, 1966147, 9, 0, 1966158, 9, 0, 1966187, 9, 0, 1966201, 9, 0, 1966205, 9, 0, 1966240, 9, 0, 1966260, 9, 0, 1966269, 9, 0, 1966289, 9, 0, 1966297, 9, 0, 2031616, 9, 0, 2031638, 9, 0, 2031639, 9, 0, 2031640, 9, 0, 2031641, 9, 0, 2031642, 9, 0, 2031643, 9, 0, 2031644, 9, 0, 2031645, 9, 0, 2031646, 9, 0, 2031647, 9, 0, 2031648, 9, 0, 2031649, 9, 0, 2031650, 9, 0, 2031651, 9, 0, 2031652, 9, 0, 2031683, 9, 0, 2031694, 9, 0, 2031723, 9, 0, 2031737, 9, 0, 2031741, 9, 0, 2031776, 9, 0, 2031796, 9, 0, 2031805, 9, 0, 2031825, 9, 0, 2031833, 9, 0, 2097152, 9, 0, 2097219, 9, 0, 2097230, 9, 0, 2097259, 9, 0, 2097260, 9, 0, 2097261, 9, 0, 2097262, 9, 0, 2097263, 9, 0, 2097264, 9, 0, 2097265, 9, 0, 2097266, 9, 0, 2097267, 9, 0, 2097268, 9, 0, 2097269, 9, 0, 2097270, 9, 0, 2097271, 9, 0, 2097272, 9, 0, 2097273, 9, 0, 2097277, 9, 0, 2097312, 9, 0, 2097332, 9, 0, 2097341, 9, 0, 2097361, 9, 0, 2097369, 9, 0, 2162688, 9, 0, 2162755, 9, 0, 2162766, 9, 0, 2162813, 9, 0, 2162848, 9, 0, 2162868, 9, 0, 2162877, 9, 0, 2162897, 9, 0, 2162905, 9, 0, 2228224, 9, 0, 2228291, 9, 0, 2228302, 9, 0, 2228349, 9, 0, 2228384, 9, 0, 2228404, 9, 0, 2228413, 9, 0, 2228414, 9, 0, 2228415, 9, 0, 2228416, 9, 0, 2228417, 9, 0, 2228418, 9, 0, 2228419, 9, 0, 2228420, 9, 0, 2228421, 9, 0, 2228422, 9, 0, 2228423, 9, 0, 2228424, 9, 0, 2228425, 9, 0, 2228426, 9, 0, 2228427, 9, 0, 2228428, 9, 0, 2228429, 9, 0, 2228430, 9, 0, 2228431, 9, 0, 2228432, 9, 0, 2228433, 9, 0, 2228434, 9, 0, 2228435, 9, 0, 2228436, 9, 0, 2228437, 9, 0, 2228438, 9, 0, 2228439, 9, 0, 2228440, 9, 0, 2228441, 9, 0, 2293760, 9, 0, 2293827, 9, 0, 2293838, 9, 0, 2293885, 9, 0, 2293920, 9, 0, 2293940, 9, 0, 2359296, 9, 0, 2359363, 9, 0, 2359374, 9, 0, 2359421, 9, 0, 2359451, 9, 0, 2359452, 9, 0, 2359453, 9, 0, 2359454, 9, 0, 2359455, 9, 0, 2359456, 9, 0, 2359476, 9, 0, 2424832, 9, 0, 2424899, 9, 0, 2424910, 9, 0, 2424957, 9, 0, 2424987, 9, 0, 2424989, 9, 0, 2425012, 9, 0, 2490368, 9, 0, 2490435, 9, 0, 2490446, 9, 0, 2490493, 9, 0, 2490523, 9, 0, 2490525, 9, 0, 2490548, 9, 0, 2555904, 9, 0, 2555971, 9, 0, 2555982, 9, 0, 2556029, 9, 0, 2556059, 9, 0, 2556061, 9, 0, 2556084, 9, 0, 2621440, 9, 0, 2621507, 9, 0, 2621518, 9, 0, 2621565, 9, 0, 2621566, 9, 0, 2621567, 9, 0, 2621568, 9, 0, 2621569, 9, 0, 2621570, 9, 0, 2621577, 9, 0, 2621578, 9, 0, 2621579, 9, 0, 2621580, 9, 0, 2621581, 9, 0, 2621582, 9, 0, 2621583, 9, 0, 2621584, 9, 0, 2621585, 9, 0, 2621586, 9, 0, 2621587, 9, 0, 2621588, 9, 0, 2621589, 9, 0, 2621595, 9, 0, 2621597, 9, 0, 2621620, 9, 0, 2686976, 9, 0, 2687043, 9, 0, 2687054, 9, 0, 2687055, 9, 0, 2687056, 9, 0, 2687057, 9, 0, 2687058, 9, 0, 2687059, 9, 0, 2687060, 9, 0, 2687061, 9, 0, 2687062, 9, 0, 2687063, 9, 0, 2687064, 9, 0, 2687065, 9, 0, 2687066, 9, 0, 2687067, 9, 0, 2687068, 9, 0, 2687069, 9, 0, 2687070, 9, 0, 2687071, 9, 0, 2687072, 9, 0, 2687073, 9, 0, 2687074, 9, 0, 2687075, 9, 0, 2687076, 9, 0, 2687077, 9, 0, 2687078, 9, 0, 2687079, 9, 0, 2687080, 9, 0, 2687081, 9, 0, 2687082, 9, 0, 2687083, 9, 0, 2687084, 9, 0, 2687085, 9, 0, 2687086, 9, 0, 2687087, 9, 0, 2687088, 9, 0, 2687089, 9, 0, 2687090, 9, 0, 2687091, 9, 0, 2687092, 9, 0, 2687093, 9, 0, 2687094, 9, 0, 2687095, 9, 0, 2687096, 9, 0, 2687097, 9, 0, 2687098, 9, 0, 2687099, 9, 0, 2687100, 9, 0, 2687101, 9, 0, 2687102, 9, 0, 2687103, 9, 0, 2687104, 9, 0, 2687105, 9, 0, 2687106, 9, 0, 2687113, 9, 0, 2687114, 9, 0, 2687115, 9, 0, 2687116, 9, 0, 2687117, 9, 0, 2687118, 9, 0, 2687119, 9, 0, 2687120, 9, 0, 2687121, 9, 0, 2687122, 9, 0, 2687123, 9, 0, 2687124, 9, 0, 2687125, 9, 0, 2687131, 9, 0, 2687132, 9, 0, 2687133, 9, 0, 2687134, 9, 0, 2687135, 9, 0, 2687136, 9, 0, 2687137, 9, 0, 2687138, 9, 0, 2687139, 9, 0, 2687140, 9, 0, 2687141, 9, 0, 2687142, 9, 0, 2687143, 9, 0, 2687144, 9, 0, 2687145, 9, 0, 2687146, 9, 0, 2687147, 9, 0, 2687148, 9, 0, 2687149, 9, 0, 2687150, 9, 0, 2687151, 9, 0, 2687152, 9, 0, 2687153, 9, 0, 2687154, 9, 0, 2687155, 9, 0, 2687156, 9, 0, 2687165, 9, 0, 2687166, 9, 0, 2687167, 9, 0, 2687168, 9, 0, 2687169, 9, 0, 2687170, 9, 0, 2687171, 9, 0, 2687172, 9, 0, 2687173, 9, 0, 2687174, 9, 0, 2687175, 9, 0, 2687176, 9, 0, 2687177, 9, 0, 2687178, 9, 0, 2687179, 9, 0, 2687180, 9, 0, 2687181, 9, 0, 2687182, 9, 0, 2687183, 9, 0, 2687184, 9, 0, 2687185, 9, 0, 2687186, 9, 0, 2687187, 9, 0, 2687188, 9, 0, 2687189, 9, 0, 2687190, 9, 0, 2687191, 9, 0, 2687192, 9, 0, 2687193, 9, 0, 2687194, 9, 0, 2687195, 9, 0, 2687196, 9, 0, 2687197, 9, 0, 2687198, 9, 0, 2687199, 9, 0, 2687200, 9, 0, 2687201, 9, 0, 2687202, 9, 0, 2687203, 9, 0, 2687204, 9, 0, 2687205, 9, 0, 2687206, 9, 0, 2687207, 9, 0, 2687208, 9, 0, 2687209, 9, 0, 2687210, 9, 0, 2687211, 9, 0, 2752512, 9, 0, 2752513, 9, 0, 2752514, 9, 0, 2752515, 9, 0, 2752516, 9, 0, 2752517, 9, 0, 2752518, 9, 0, 2752519, 9, 0, 2752520, 9, 0, 2752521, 9, 0, 2752522, 9, 0, 2752523, 9, 0, 2752524, 9, 0, 2752525, 9, 0, 2752526, 9, 0, 2752527, 9, 0, 2752528, 9, 0, 2752529, 9, 0, 2752530, 9, 0, 2752531, 9, 0, 2752532, 9, 0, 2752533, 9, 0, 2752534, 9, 0, 2752535, 9, 0, 2752536, 9, 0, 2752537, 9, 0, 2752538, 9, 0, 2752539, 9, 0, 2752540, 9, 0, 2752541, 9, 0, 2752542, 9, 0, 2752543, 9, 0, 2752544, 9, 0, 2752545, 9, 0, 2752546, 9, 0, 2752547, 9, 0, 2752548, 9, 0, 2752549, 9, 0, 2752550, 9, 0, 2752551, 9, 0, 2752552, 9, 0, 2752553, 9, 0, 2752554, 9, 0, 2752555, 9, 0, 2752556, 9, 0, 2752557, 9, 0, 2752558, 9, 0, 2752559, 9, 0, 2752560, 9, 0, 2752561, 9, 0, 2752562, 9, 0, 2752563, 9, 0, 2752564, 9, 0, 2752565, 9, 0, 2752566, 9, 0, 2752567, 9, 0, 2752568, 9, 0, 2752569, 9, 0, 2752570, 9, 0, 2752571, 9, 0, 2752572, 9, 0, 2752573, 9, 0, 2752574, 9, 0, 2752575, 9, 0, 2752576, 9, 0, 2752577, 9, 0, 2752578, 9, 0, 2752579, 9, 0 )

[node name="StaticBody2D" type="StaticBody2D" parent="TileMap"]

[node name="area_1" type="CollisionPolygon2D" parent="TileMap/StaticBody2D"]
polygon = PoolVector2Array( 15.4365, 256.912, 0.415878, 256.912, -0.00889206, 432.017, 0.168771, 688.041, 1087.73, 687.862, 1087.74, 320.019, 1008.25, 320.019, 1008.33, 400.026, 896.504, 399.765, 896.504, 415.354, 848.307, 415.868, 848.324, 431.715, 815.979, 431.724, 815.979, 447.211, 719.87, 446.979, 719.87, 415.993, 624.083, 415.898, 624.083, 431.958, 592.489, 431.958, 592.489, 496.652, 367.926, 496.117, 367.926, 480.174, 319.927, 479.918, 319.941, 464.007, 256.084, 463.929, 256.007, 447.925, 128.303, 447.716, 128.303, 432.025, 15.4893, 431.918 )

[node name="area_2" type="CollisionPolygon2D" parent="TileMap/StaticBody2D"]
polygon = PoolVector2Array( 1247.92, 399.452, 1248.14, 672.183, 2096.25, 672.133, 2096.09, 639.546, 2016.07, 639.88, 2016.14, 431.897, 1936.05, 431.97, 1936.1, 512.008, 1728, 512.035, 1727.91, 464.113, 1536.01, 464.052, 1423.57, 464.003, 1424.08, 431.699, 1376.26, 431.716, 1376.14, 399.881 )

[node name="area_3" type="CollisionPolygon2D" parent="TileMap/StaticBody2D"]
polygon = PoolVector2Array( 1392.08, 175.855, 1391.81, 207.165, 1408.08, 239.736, 1456.55, 288.24, 1488.31, 303.262, 1536.17, 304.08, 1536.3, 319.887, 1568.15, 432.296, 1680.09, 431.972, 1680.09, 385.06, 1728.74, 383.766, 1744, 367.697, 1743.99, 336.005, 1648.2, 334.987, 1648.18, 303.978, 1632.27, 303.836, 1632.02, 256.143, 1887.83, 255.981, 1999.84, 207.666, 2015.98, 191.859, 2016.05, 176.143 )

[node name="area_4" type="CollisionPolygon2D" parent="TileMap/StaticBody2D"]
polygon = PoolVector2Array( 2480.08, 576.019, 2560.72, 575.968, 2558.87, 398.7, 2623.68, 398.7, 2623.68, 415.297, 2688.03, 415.081, 2688.18, 431.119, 2703.92, 431.269, 2703.92, 447.757, 2895.88, 447.907, 2896.03, 671.864, 2480, 671.972 )

[node name="area_5" type="CollisionPolygon2D" parent="TileMap/StaticBody2D"]
polygon = PoolVector2Array( 3024.39, 286.471, 3359.65, 287.413, 3359.64, 352.331, 3423.85, 352.268, 3423.73, 399.952, 3455.74, 399.952, 3455.74, 415.957, 3487.98, 415.957, 3487.92, 559.871, 3023.13, 561.949 )

[node name="area_6" type="CollisionPolygon2D" parent="TileMap/StaticBody2D"]
polygon = PoolVector2Array( 2191.67, 639.928, 2191.77, 672.563, 2399.9, 671.979, 2399.9, 639.276 )

[node name="block_1" type="CollisionPolygon2D" parent="TileMap/StaticBody2D"]
polygon = PoolVector2Array( 2112.14, 335.952, 2112.3, 383.877, 2159.79, 383.816, 2159.84, 335.462 )

[node name="block_2" type="CollisionPolygon2D" parent="TileMap/StaticBody2D"]
polygon = PoolVector2Array( 2255.67, 431.66, 2303.93, 431.51, 2303.78, 479.927, 2256.26, 479.927 )

[node name="block_3" type="CollisionPolygon2D" parent="TileMap/StaticBody2D"]
polygon = PoolVector2Array( 2368.26, 240.021, 2368.03, 288.199, 2416.51, 288.083, 2416.07, 239.982 )

[node name="area_7" type="CollisionPolygon2D" parent="TileMap/StaticBody2D"]
polygon = PoolVector2Array( 3023.92, 656.125, 3775.84, 656.125, 3776.04, 671.826, 3023.92, 672.233 )

[node name="death_zone" type="Area2D" parent="."]
position = Vector2( 0, 279 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="death_zone"]
position = Vector2( 2028.02, 419.261 )
shape = SubResource( 1 )

[node name="respawn" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="respawn"]
position = Vector2( 145.443, 325.01 )
shape = SubResource( 2 )

[node name="end_level" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 3733.71, 615.377 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="end_level"]
shape = SubResource( 3 )

[node name="frog" parent="." instance=ExtResource( 4 )]
position = Vector2( 477.262, 455.904 )
target = NodePath("../player")

[node name="frog2" parent="." instance=ExtResource( 4 )]
position = Vector2( 779.874, 407.484 )
target = NodePath("../player")

[node name="frog3" parent="." instance=ExtResource( 4 )]
position = Vector2( 1455.13, 136.062 )
target = NodePath("../player")

[node name="frog4" parent="." instance=ExtResource( 4 )]
position = Vector2( 1886.27, 472.172 )
target = NodePath("../player")

[node name="frog5" parent="." instance=ExtResource( 4 )]
position = Vector2( 2861.02, 407.758 )
target = NodePath("../player")

[node name="frog6" parent="." instance=ExtResource( 4 )]
position = Vector2( 3535.81, 614.295 )
target = NodePath("../player")
[connection signal="body_entered" from="death_zone" to="." method="_on_death_zone_body_entered"]
[connection signal="body_entered" from="respawn" to="." method="_on_respawn_body_entered"]
